ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/Leasehold_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Leasehold Opportunity</label>
    <nameField>
        <label>Leasehold Opportunity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leasehold Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>