ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>