ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Asking_or_PP_if_accepted__c.field-meta.xml
<CustomField>
    <fullName>Asking_or_PP_if_accepted__c</fullName>
    <label>Asking (or PP if accepted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>