ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Cash_required_all_costs_25_of_PP_IN__c.field-meta.xml
<CustomField>
    <fullName>Cash_required_all_costs_25_of_PP_IN__c</fullName>
    <label>Cash required (all costs + 25% of PP) IN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>