ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Completion_cash_required_25_of_PP_SD__c.field-meta.xml
<CustomField>
    <fullName>Completion_cash_required_25_of_PP_SD__c</fullName>
    <label>Completion cash required (25% of PP + SD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>