ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/COST_Exchange_S42_related_fees__c.field-meta.xml
<CustomField>
    <fullName>COST_Exchange_S42_related_fees__c</fullName>
    <label>COST: Exchange-, S42 related fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>