ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/COST_HOLD_Remortgage_legals__c.field-meta.xml
<CustomField>
    <fullName>COST_HOLD_Remortgage_legals__c</fullName>
    <label>COST: (HOLD)  Remortgage legals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>