ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/COST_Lease_survey_and_premium_negotiati__c.field-meta.xml
<CustomField>
    <fullName>COST_Lease_survey_and_premium_negotiati__c</fullName>
    <label>COST: Lease survey and premium negotiati</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>