ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/COST_Rent_IN_until_sale_months__c.field-meta.xml
<CustomField>
    <fullName>COST_Rent_IN_until_sale_months__c</fullName>
    <label>COST: Rent IN until sale (months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>