ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/COSTSolution_cost_EXCL_finance__c.field-meta.xml
<CustomField>
    <fullName>COSTSolution_cost_EXCL_finance__c</fullName>
    <label>COST:Solution cost EXCL finance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>