ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Delayed_compl_agreed__c.field-meta.xml
<CustomField>
    <fullName>Delayed_compl_agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delayed compl. agreed</label>
    <type>Checkbox</type>
</CustomField>