ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Extension_premium_15__c.field-meta.xml
<CustomField>
    <fullName>Extension_premium_15__c</fullName>
    <label>Extension premium (+/- 15%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>