ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/First_seenPROPERTYDATA_EXPORT__c.field-meta.xml
<CustomField>
    <fullName>First_seenPROPERTYDATA_EXPORT__c</fullName>
    <label>First seenPROPERTYDATA EXPORT &gt;&gt;</label>
    <type>Date</type>
</CustomField>