ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Followup_Due_date__c.field-meta.xml
<CustomField>
    <fullName>Followup_Due_date__c</fullName>
    <label>Followup Due date</label>
    <type>Date</type>
</CustomField>