ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Freeholder__c.field-meta.xml
<CustomField>
    <fullName>Freeholder__c</fullName>
    <label>Freeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>