ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Ground_rent_PA__c.field-meta.xml
<CustomField>
    <fullName>Ground_rent_PA__c</fullName>
    <label>Ground rent PA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>