ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Interest_on_PP__c.field-meta.xml
<CustomField>
    <fullName>Interest_on_PP__c</fullName>
    <label>Interest on PP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>