ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Lease_epiry_date__c.field-meta.xml
<CustomField>
    <fullName>Lease_epiry_date__c</fullName>
    <label>Lease epiry date</label>
    <type>Date</type>
</CustomField>