ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Max_offer_over_asking_price__c.field-meta.xml
<CustomField>
    <fullName>Max_offer_over_asking_price__c</fullName>
    <label>Max offer over asking price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>