ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Offer_0_20_margin__c.field-meta.xml
<CustomField>
    <fullName>Offer_0_20_margin__c</fullName>
    <label>Offer 0 (= 20% margin)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>