ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Offer_3_40K_margin__c.field-meta.xml
<CustomField>
    <fullName>Offer_3_40K_margin__c</fullName>
    <label>Offer 3 (= 40K margin)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>