ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Premium_agreed_pre_exchange__c.field-meta.xml
<CustomField>
    <fullName>Premium_agreed_pre_exchange__c</fullName>
    <label>Premium agreed pre exchange</label>
    <length>255</length>
    <type>Text</type>
</CustomField>