ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Price_as_advertised__c.field-meta.xml
<CustomField>
    <fullName>Price_as_advertised__c</fullName>
    <label>Price as advertised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>