ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/ROC_PA__c.field-meta.xml
<CustomField>
    <fullName>ROC_PA__c</fullName>
    <label>ROC PA</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>