ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Service_Charge_PA__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_PA__c</fullName>
    <label>Service Charge PA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>