ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/SQFT__c.field-meta.xml
<CustomField>
    <fullName>SQFT__c</fullName>
    <label>SQFT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>