ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Tenant_in_place__c.field-meta.xml
<CustomField>
    <fullName>Tenant_in_place__c</fullName>
    <label>Tenant in place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>