ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/URL_2nd_listing__c.field-meta.xml
<CustomField>
    <fullName>URL_2nd_listing__c</fullName>
    <label>URL (2nd listing)</label>
    <type>Url</type>
</CustomField>