ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/URL_index__c.field-meta.xml
<CustomField>
    <fullName>URL_index__c</fullName>
    <externalId>true</externalId>
    <label>URL index</label>
    <length>99</length>
    <type>Text</type>
</CustomField>