ezyplot-x1/force-app/main/default/objects/Leasehold_Opportunity__c/fields/Value_with_extended_lease_OMV__c.field-meta.xml
<CustomField>
    <fullName>Value_with_extended_lease_OMV__c</fullName>
    <label>Value with extended lease (OMV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>